--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
 
-  <body>
+  <body ng-controller="GitUserSearchController as searchCtrl">
     <div>
       <form class="form-horizontal">
         <input type="text" >
