--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/app.js"></script>
     <script src="js/gitUserSearchController.js"></script>
+    <script src="js/searchFactory.js"></script>
 
     <style>
       .list-group-item {
@@ -18,6 +19,11 @@
       }
       .form-horizontal{
         padding-left: 40%;
+      }
+
+      img{
+        height: 50px;
+        width: 50px;
       }
     </style>
   </head>
@@ -30,7 +36,7 @@
       </form>
       <ul class="list-group">
         <li ng-repeat="user in searchCtrl.searchResult.items">
-          <img ng-src="{{user.avatar_url}}&s=50">
+          <img ng-src="{{user.avatar_url}}">
           <a ng-href="{{user.html_url}}">{{user.login}}</a>
         </li>
       </ul>
