--- a/index.html
+++ b/index.html
@@ -4,35 +4,21 @@
     <meta charset="utf-8">
     <title>Github user search</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="views/gitSearch.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="js/app.js"></script>
     <script src="js/gitUserSearchController.js"></script>
     <script src="js/searchFactory.js"></script>
-
-    <style>
-      .list-group-item {
-        border-color: blue;
-        border-padding: 40%;
-        padding-left: 40%;
-      }
-      .form-horizontal{
-        padding-left: 40%;
-      }
-
-      img{
-        height: 50px;
-        width: 50px;
-      }
-    </style>
   </head>
 
   <body ng-controller="GitUserSearchController as searchCtrl">
     <div>
       <form class="form-horizontal">
-        <input type="text" ng-model="searchCtrl.searchTerm" ng-change="searchCtrl.doSearch()" ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }">
-        <button class="btn" ng-click="searchCtrl.doSearch()">Search</button>
+        <input type="text" ng-model="searchCtrl.searchTerm" ng-change="searchCtrl.doSearch()"
+                ng-model-options="{ updateOn: 'default blur', debounce: {'default': 500, 'blur': 0} }">
+        <button class="btn btn-primary" ng-click="searchCtrl.doSearch()">Search</button>
       </form>
       <ul class="list-group">
         <li ng-repeat="user in searchCtrl.searchResult.items">
